--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Search Results Page</title>
+	<title>New Company Page Parent</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/g/bootstrap@3.3.7(css/bootstrap.min.css)">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../styles/header.css">
@@ -50,7 +50,305 @@
 	</header> <!-- .cd-auto-hide-header -->
 
 	<main class="cd-main-content">
+		<div class="new_company">
+			<div class="new_company__header">
+				<div class="new_company__header__content">
+					<div class="row">
+						<div class="col-md-6 new_company__header__logo">
+							<img src="../images/nc_company_logo.png" class="new_company__header__logo__img"/>
+							<div class="new_company__header__logo__notes">
+								<div class="new_company__header__logo__notes1">
+									<div>Oracle</div>
+									<a href="#">Claim Company</a>
+								</div>
+								<!--<div class="new_company__header__logo__note2">-->
+									<!--Marketo, Inc.-->
+								<!--</div>-->
+								<!--<div class="new_company__header__logo__note3">-->
+									<!--Marketing Automation-->
+								<!--</div>-->
+							</div>
+						</div>
+						<div class="col-md-6 new_company__header__overview">
+							<div class="new_company__header__overview__item last"></div>
+							<div class="new_company__header__overview__item">
+								<div class="new_company__header__overview__item__title">
+									Technologies
+								</div>
+								<div class="new_company__header__overview__item__value">
+									6
+								</div>
+							</div>
+							<div class="new_company__header__overview__item ">
+								<div class="new_company__header__overview__item__title">
+									Websites
+								</div>
+								<div class="new_company__header__overview__item__value">
+									72,639
+								</div>
+							</div>
+							<div class="new_company__header__overview__item last">
+								<div class="new_company__header__overview__item__title">
+									Growth
+								</div>
+								<div class="new_company__header__overview__item__value green">
+									<div class="arrow-up"></div>
+									2%
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
+			<div class="new_company__main">
+				<div class="new_company__main__content">
+					<div class="new_company__main_cont new_company__main__about">
+						<div class="new_company__main__top">
+							<div class="new_company__main__about__lgtitle">
+								Oracle is a computer technology corporation developing and marketing computer hardware
+							</div>
+							<div class="new_company__main__about__smtitle">
+								systems and enterprise software products., Oracle offers an optimized and fully integrated stack of business hardware and software systems. The Oracle Cloud offers complete SaaS application suites for ERP, HCM and CX, plus best-in-class database Platform as a Service (PaaS) and Infrastructure as a Service (IaaS) from data centers throughout the Americas, Europe and Asia. For more information about Oracle (NYSE:ORCL),.
+								<a href="#">oracle.com</a>
+							</div>
+							<div class="new_company__main__about__details">
+								<div class="new_company__main__about__details__item">
+									<div class="new_company__main__about__xstitle">
+										Year Founded
+									</div>
+									<div class="new_company__main__about__mdtitle">
+										1977
+									</div>
+								</div>
+								<div class="new_company__main__about__details__item">
+									<div class="new_company__main__about__xstitle">
+										Company Size
+									</div>
+									<div class="new_company__main__about__mdtitle">
+										10,000+
+									</div>
+								</div>
+								<div class="new_company__main__about__details__item">
+									<div class="new_company__main__about__xstitle">
+										Location
+									</div>
+									<div class="new_company__main__about__mdtitle">
+										Redwood City, CA
+									</div>
+								</div>
+								<div class="new_company__main__about__details__item last">
+									<div class="new_company__main__about__xstitle">
+										Revenue Model
+									</div>
+									<div class="new_company__main__about__mdtitle">
+										N/A
+									</div>
+								</div>
+							</div>
+
+							<div class="new_company__table">
+								<div class="new_company__table__header">
+									<div class="new_company__table__products">
+										Technology Products
+									</div>
+									<div class="new_company__table__category">
+										Category
+									</div>
+									<div class="new_company__table__website">
+										# of Websites
+									</div>
+									<div class="new_company__table__marketshare">
+										Marketshare
+									</div>
+									<div class="new_company__table__change">
+										% Change
+									</div>
+								</div>
+								<div class="new_company__table__content">
+									<div class="new_company__table__row">
+										<div class="new_company__table__products">
+											<img src="../images/tech_tb_logo1.png"/>
+											<div class="new_company__table__products__title">
+												<div>Datalogix</div>
+												<span>Oracle, Inc.</span>
+											</div>
+										</div>
+										<div class="new_company__table__category">
+											Data Management Platform
+										</div>
+										<div class="new_company__table__website">
+											43,917
+										</div>
+										<div class="new_company__table__marketshare">
+											80%
+										</div>
+										<div class="new_company__table__change">
+											<div class="arrow-up"></div>
+											23%
+										</div>
+									</div>
+									<div class="new_company__table__row">
+										<div class="new_company__table__products">
+											<img src="../images/tech_tb_logo2.png"/>
+											<div class="new_company__table__products__title">
+												<div>Moat</div>
+												<span>Oracle, Inc.</span>
+											</div>
+										</div>
+										<div class="new_company__table__category">
+											Marketing Analytics, Performance & Attribution
+										</div>
+										<div class="new_company__table__website">
+											11,728
+										</div>
+										<div class="new_company__table__marketshare">
+											26%
+										</div>
+										<div class="new_company__table__change">
+											<div class="arrow-up"></div>
+											23%
+										</div>
+									</div>
+									<div class="new_company__table__row">
+										<div class="new_company__table__products">
+											<img src="../images/tech_tb_logo3.png"/>
+											<div class="new_company__table__products__title">
+												<div>Oracle Marketing Cloud</div>
+												<span>Oracle, Inc.</span>
+											</div>
+										</div>
+										<div class="new_company__table__category">
+											Marketing Automation
+										</div>
+										<div class="new_company__table__website">
+											7,676
+										</div>
+										<div class="new_company__table__marketshare">
+											32%
+										</div>
+										<div class="new_company__table__change">
+											<div class="arrow-up"></div>
+											23%
+										</div>
+									</div>
+									<div class="new_company__table__row">
+										<div class="new_company__table__products">
+											<img src="../images/tech_tb_logo4.png"/>
+											<div class="new_company__table__products__title">
+												<div>Eloqua</div>
+												<span>Oracle, Inc.</span>
+											</div>
+										</div>
+										<div class="new_company__table__category">
+											Marketing Automation
+										</div>
+										<div class="new_company__table__website">
+											7,549
+										</div>
+										<div class="new_company__table__marketshare">
+											16%
+										</div>
+										<div class="new_company__table__change">
+											<div class="arrow-up"></div>
+											23%
+										</div>
+									</div>
+									<div class="new_company__table__row">
+										<div class="new_company__table__products">
+											<img src="../images/tech_tb_logo5.png"/>
+											<div class="new_company__table__products__title">
+												<div>Maxymiser</div>
+												<span>Oracle, Inc.</span>
+											</div>
+										</div>
+										<div class="new_company__table__category">
+											Optimization Testing & Personalization
+										</div>
+										<div class="new_company__table__website">
+											1,596
+										</div>
+										<div class="new_company__table__marketshare">
+											11%
+										</div>
+										<div class="new_company__table__change">
+											<div class="arrow-up"></div>
+											23%
+										</div>
+									</div>
+									<div class="new_company__table__row">
+										<div class="new_company__table__products">
+											<img src="../images/tech_tb_logo6.png"/>
+											<div class="new_company__table__products__title">
+												<div>Bronto</div>
+												<span>Oracle, Inc.</span>
+											</div>
+										</div>
+										<div class="new_company__table__category">
+											Email Marketing
+										</div>
+										<div class="new_company__table__website">
+											173
+										</div>
+										<div class="new_company__table__marketshare">
+											23%
+										</div>
+										<div class="new_company__table__change">
+											<div class="arrow-up"></div>
+											23%
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="new_company__main__low">
+							<div class="new_company__main__news__lgtitle">
+								In the News
+							</div>
+							<div class="new_company__main__news__item">
+								<img src="../images/nc_news_logo1.png"/>
+								<div class="new_company__main__news__item__content">
+									<div class="new_company__main__news__smtitle">
+										MARKETING TECHNOLOGY INSIGHTS <span>3 days ago</span>
+									</div>
+									<div class="new_company__main__news__mdtitle">
+										Oracle Is Integrating Machine Learning Across All Its Platform-As-A-Service Offerings
+									</div>
+								</div>
+							</div>
+
+							<div class="new_company__main__news__item">
+								<img src="../images/nc_news_logo2.png" class="new_company__main__news__item__img" />
+								<div class="new_company__main__news__item__content">
+									<div class="new_company__main__news__smtitle">
+										CIO <span>5 days ago</span>
+									</div>
+									<div class="new_company__main__news__mdtitle">
+										IDG Contributor Network: 5 factors that form a formidable business leader, according to Oracle CIO Mark Sunday
+									</div>
+								</div>
+							</div>
+
+							<div class="new_company__main__news__item">
+								<img src="../images/nc_news_logo3.png" class="new_company__main__news__item__img" />
+								<div class="new_company__main__news__item__content">
+									<div class="new_company__main__news__smtitle">
+										ZDNET <span>7 days ago</span>
+									</div>
+									<div class="new_company__main__news__mdtitle">
+										Oracle and cloud: Success demands a customer-centric culture
+									</div>
+								</div>
+							</div>
+
+							<a class="btn_load_more_news" href="#">
+								Load More News
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 
 
 		<!--footer-->
